include_directories(lib engine ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../source)
add_executable(xmlReadingTest EXCLUDE_FROM_ALL XmlReadingTest.cpp ../source/engine/core/math/Vector3f.cpp ../source/assets/map/XmlHelper.cpp)
add_executable(dispatcherTest EXCLUDE_FROM_ALL core/event/DispatcherTest.cpp ../source/engine/env/Environment.cpp ../source/engine/env/Config.cpp ../source/engine/core/event/Observer.cpp ../source/engine/core/event/observer/FlagObserver.cpp ../source/engine/core/event/Dispatcher.cpp)
add_executable(quaternionTest EXCLUDE_FROM_ALL ./core/math/QuaternionTest.cpp ../source/engine/core/math/Vector4f.cpp ../source/engine/core/math/Matrix4f.cpp ../source/engine/core/math/Matrix3f.cpp ../source/engine/core/math/Vector3f.cpp)
add_executable(gwenUnicodeTest EXCLUDE_FROM_ALL GwenUnicodeTest.cpp)
target_link_libraries(xmlReadingTest ${UnitTestPlusPlus_LIBRARY} ${PORTAL_TEST_LIBRARIES})
target_link_libraries(dispatcherTest ${UnitTestPlusPlus_LIBRARY} ${PORTAL_TEST_LIBRARIES})
target_link_libraries(quaternionTest ${UnitTestPlusPlus_LIBRARY} ${PORTAL_TEST_LIBRARIES})
target_link_libraries(gwenUnicodeTest ${UnitTestPlusPlus_LIBRARY} ${PORTAL_TEST_LIBRARIES})
add_custom_target(tests)
add_dependencies(tests xmlReadingTest)
add_dependencies(tests quaternionTest)
add_dependencies(tests gwenUnicodeTest)
add_test(NAME xmlReadingTest COMMAND xmlReadingTest)
add_test(NAME dispatcherTest COMMAND dispatcherTest)
add_test(NAME quaternionTest COMMAND quaternionTest)
add_test(NAME gwenUnicodeTest COMMAND gwenUnicodeTest)